--- a/docstrings/astro/gravitation.yaml
+++ b/docstrings/astro/gravitation.yaml
@@ -30,14 +30,14 @@ functions:
       Specifically, this function returns the value :math:`\mathcal{N}_{lm}`, computed from:
       
       .. math::
-          \mathcal{N}_{lm}=\sqrt\left(\frac{(2-\delta_{0m}(2l+1)(l-m)!)}{(l+m)!} \right)
+          \mathcal{N}_{lm}=\sqrt{\frac{(2-\delta_{0m}(2l+1)(l-m)!)}{(l+m)!}}
 
       with :math:`\delta_{0m}` is the Kronecker Delta function. The following can be used such that the conversion between unnormalized and fully
       normalized spherical harmonic coefficients and Legendre polynomials can be computed from:
       
       .. math::
-          [C,S]_{lm}=\mathcal{N}_{lm}[\bar{C},\bar{S}]_{lm}=
-          \bar{P}_{lm}=\mathcal{N}_{lm}{P}_{lm}=
+          [C,S]_{lm}&=\mathcal{N}_{lm}[\bar{C},\bar{S}]_{lm}\\
+          \bar{P}_{lm}&=\mathcal{N}_{lm}{P}_{lm}
 
       with :math:`[C,S]_{lm}` denoting the unnormalized cosine or sine spherical harmonic coefficients at degree :math:`l` and order :math:`m`,
       and :math:`P_{lm}` and :math:`\bar{P}_{lm}` representing the unnormalized and normalized associated Legendre polynomials at degree :math:`l` and order :math:`m`.
