--- a/docstrings/numerical_simulation/environment_setup/__package__.yaml
+++ b/docstrings/numerical_simulation/environment_setup/__package__.yaml
@@ -26,6 +26,7 @@ modules:
   - rotation_model
   - shape
   - shape_deformation
+  - vehicle_systems
 
   #########################################################################
   #  ███████ ███   ██ ██    ██ ███    ███  ██████
@@ -93,9 +94,10 @@ classes:
       - name: constant_mass # [py]
         type: float # [py]
         description: | # [py]
-          Mass that gets assigned to the vehicle. Note that this mass does *not* automatically define a gravity field
+          Mass that gets assigned to the vehicle. This mass does *not* automatically define a gravity field
           model, but is instead used for the calculation of non-conservative forces only. When creating a body with a gravity field,
-          leave this entry empty.
+          leave this entry empty. NOTE: this option is a shorthand for assigning a mass-only
+          :func:`~tudatpy.numerical_simulation.environment_setup.rigid_body.constant_rigid_body_properties` to ``mass_property_settings``, and will be deprecated.
 
       - name: atmosphere_settings # [py]
         type: AtmosphereSettings # [py]
@@ -128,14 +130,50 @@ classes:
           Object that defines the settings of the shape model that is to be created. A variable of this type is typically
           assigned by using a factory function from the :ref:`\`\`shape\`\`` module.
 
-
-      - name: mass_property_settings # [py]
-        type: BodyMassPropertiesSettings # [py]
+      - name: aerodynamic_coefficient_settings # [py]
+        type: AerodynamicCoefficientSettings # [py]
         description: | # [py]
-          Object that defines the settings of the body mass properties that are to be created. A variable of this type is typically
-          assigned by using a factory function from the :ref:`\`\`AAA\`\`` module. Note that this setting does *not* define
+          Object that defines the settings of the aerodynamic coefficient model that is to be created. A variable of this type is typically
+          assigned by using a factory function from the :ref:`\`\`aerodynamic_coefficients\`\`` module.
+
+
+      - name: gravity_field_variation_settings # [py]
+        type: list[GravityFieldVariationSettings] # [py]
+        description: | # [py]
+          List of objects that define the settings of time variations of the gravity field variation models that are to be created. Variables in this list are typically
+          assigned by using a factory function from the :ref:`\`\`gravity_field_variations\`\`` module.
+
+      - name: shape_deformation_settings # [py]
+        type: list[BodyDeformationSettings] # [py]
+        description: | # [py]
+          List of objects that define the settings of time variations of the exterior shape of natural bodies are to be created. Variables in this list are typically
+          assigned by using a factory function from the :ref:`\`\`shape_deformation\`\`` module.
+
+
+      - name: rigid_body_settings # [py]
+        type: RigidBodyPropertiesSettings # [py]
+        description: | # [py]
+          Object that defines the settings of the body rigid body (mass, center of mass, inertia) properties that are to be created. A variable of this type is typically
+          assigned by using a factory function from the :ref:`\`\`rigid_body\`\`` module. Note that this setting does *not* define
           the gravity field, but rather only the mass, center of mass and inertia tensor.
 
+      - name: radiation_pressure_target_settings # [py]
+        type: RadiationPressureTargetModelSettings # [py]
+        description: | # [py]
+          Object that defines the settings of the radiation pressure target model that is to be created. A variable of this type is typically
+          assigned by using a factory function from the :ref:`\`\`radiation_pressure\`\`` module. 
+
+      - name: radiation_source_settings # [py]
+        type: RadiationSourceModelSettings # [py]
+        description: | # [py]
+          Object that defines the settings of the radiation source model that is to be created. A variable of this type is typically
+          assigned by using a factory function from the :ref:`\`\`radiation_pressure\`\`` module. 
+
+      - name: vehicle_shape_settings # [py]
+        type: FullPanelledBodySettings # [py]
+        description: | # [py]
+          Object that defines the settings of an exterior panelled vehicle shape that is to be created. A variable of this type is typically
+          assigned by using a factory function from the :ref:`\`\`vehicle_systems\`\`` module. 
 
 ##############################################################################
 #  ███████ ██    ██ ███    ██  ██████ ████████ ██  ██████  ███    ██  ██████
