--- a/environment.yaml
+++ b/environment.yaml
@@ -4,7 +4,7 @@ channels:
   - tudat-team
 dependencies:
   # All standard tudat-bundle deps are needed for sphinx-documentation for tudatpy.
-  - eigen=3.3.7
+  - eigen
   - boost-cpp
   - tudat-resources
   - sofa-cmake
@@ -27,7 +27,10 @@ dependencies:
   - doxygen # for cpp api
   - pip
   - pip:
-      - sphinxcontrib-napoleon
-      - furo
-      - sphinx_rtd_theme
-      - sphinx_copybutton
+     - nbsphinx
+     - sphinxcontrib-napoleon
+     - sphinx_rtd_theme
+     - sphinxcontrib-fulltoc
+     - sphinxcontrib-bibtex
+     - furo
+     - sphinx_copybutton 
